cabal-version:      2.4
name:               advent2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Leon Boshuizen
maintainer:         llc.boshuizen@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent2021
  hs-source-dirs:      src/
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       "-with-rtsopts=-N10 -s"
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                       ,array
                       ,containers
                       ,mtl
                       ,memoize
                       ,split
                       ,unordered-containers  
                       ,vector
                       ,search-algorithms
                       ,parallel
  -- hs-source-dirs:
  default-language:    Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  build-depends: 
    hspec == 2.* 
    ,base == 4.*
    ,array
    ,containers
  hs-source-dirs:      test, src
  main-is:       Spec.hs
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
